<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/top_image"
        android:layout_width="86dp"
        android:layout_height="75dp"
        android:layout_marginTop="100dp"
        android:animation="@anim/fade_in"
        android:src="@drawable/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:animation="@anim/fade_in"
        android:text="@string/welcome_text"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_image" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/under_welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:animation="@anim/fade_in"
        android:text="@string/motivational_quote"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:animation="@anim/fade_in"
        android:backgroundTint="@color/text"
        android:text="@string/register"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/log_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/log_in_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:animation="@anim/fade_in"
        android:backgroundTint="@color/text"
        android:text="@string/login"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>